--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
-		<tomcat.version>8.0.3</tomcat.version>
 	</properties>
 	<dependencies>
 	
@@ -35,9 +34,16 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 	
+	<!--  
 		<dependency>
  			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+		</dependency>
+	-->
+	
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 		</dependency>
 	
 		<dependency>
