--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.data.rest.basePath=/api
-spring.datasource.username=qwertqwert5
-spring.datasource.password=qwertqwertqwerqwerqwerqwerwqerqwer123456qwer
+logging.level.org.springframework.web=DEBUG
+spring.datasource.username=123
+spring.datasource.password=123
